--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <img src="images/minha foto.png" alt="">
             <p>Meu nome é <b>Victor De Lima Cavalcante Correia</b> tenho <b>26 anos</b>  estou no primeiro semestre de <b>Analise & Desenvolvimento De Sistemas</b><br> e também fazendo curso de <b>Html5,Css3 e javascript</b>.</p> <br>
             <h3>como falar comigo</h3><br> 
-            <a href="https://web.facebook.com/vitinhofacenovo" target="_blank"><img src="images/icone-facebook.png" alt="">Facebook</a>
-            <a href="https://www.linkedin.com/in/victor-cavalcante-53ab6525b/" target="_blank"><img src="images/icone-linkedin.png" alt="">Linkedin</a>
-            <a href="https://github.com/vitorlimac" target="_blank"><img src="images/icone-github.png" alt="">Github</a>
-            <a href="https://www.instagram.com/viictor.cavalcantee/" target="_blank"><img src="images/icone-instagram.png" alt="">Instagram</a>        
+            <a href="https://web.facebook.com/vitinhofacenovo" target="_blank"><img src="images/icone-facebook.png" alt=""></a>
+            <a href="https://www.linkedin.com/in/victor-cavalcante-53ab6525b/" target="_blank"><img src="images/icone-linkedin.png" alt=""></a>
+            <a href="https://github.com/vitorlimac" target="_blank"><img src="images/icone-github.png" alt=""></a>
+            <a href="https://www.instagram.com/viictor.cavalcantee/" target="_blank"><img src="images/icone-instagram.png" alt=""></a>        
         </div>        
     </section>
 </body>
