--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img src="images/healder.png" alt="">
         <p>Victor De Lima Cavalcante Correia</p>
     </header>
-    <section class="eu">             
+    <main class="eu">             
         <div class="eu-now">
             <h1>Quem sou eu ?</h1>
             <img src="images/minha foto.png" alt="">
@@ -24,6 +24,6 @@
             <a href="https://github.com/vitorlimac" target="_blank"><img src="images/icone-github.png" alt=""></a>
             <a href="https://www.instagram.com/viictor.cavalcantee/" target="_blank"><img src="images/icone-instagram.png" alt=""></a>        
         </div>        
-    </section>
+    </main>
 </body>
 </html>
