--- a/index.html
+++ b/index.html
@@ -13,17 +13,21 @@
         <img src="images/healder.png" alt="">
         <p>Victor De Lima Cavalcante Correia</p>
     </header>
-    <main class="eu">             
-        <div class="eu-now">
-            <h1>Quem sou eu ?</h1>
-            <img src="images/minha foto.png" alt="">
-            <p>Meu nome é <b>Victor De Lima Cavalcante Correia</b> tenho <b>26 anos</b>  estou no primeiro semestre de <b>Analise & Desenvolvimento De Sistemas</b><br> e também fazendo curso de <b>Html5,Css3 e javascript</b>.</p> <br>
-            <h3>como falar comigo</h3><br> 
-            <a href="https://web.facebook.com/vitinhofacenovo" target="_blank"><img src="images/icone-facebook.png" alt=""></a>
-            <a href="https://www.linkedin.com/in/victor-cavalcante-53ab6525b/" target="_blank"><img src="images/icone-linkedin.png" alt=""></a>
-            <a href="https://github.com/vitorlimac" target="_blank"><img src="images/icone-github.png" alt=""></a>
-            <a href="https://www.instagram.com/viictor.cavalcantee/" target="_blank"><img src="images/icone-instagram.png" alt=""></a>        
-        </div>        
+    <main>         
+            <article>
+                <h1>Quem sou eu ?</h1>
+                <img src="images/minha foto.png" alt="foto do victor">
+                <p>Meu nome é <b>Victor De Lima Cavalcante Correia</b> tenho <b>26 anos</b>  estou no primeiro semestre de <b>Analise & Desenvolvimento De Sistemas</b> e também fazendo curso de <b>Html5,Css3 e javascript</b>.</p> 
+                <h2>como falar comigo</h2>
+                <a href="https://web.facebook.com/vitinhofacenovo" target="_blank"><img src="images/icone-facebook.png" alt=""></a>
+                <a href="https://www.linkedin.com/in/victor-cavalcante-53ab6525b/" target="_blank"><img src="images/icone-linkedin.png" alt=""></a>
+                <a href="https://github.com/vitorlimac" target="_blank"><img src="images/icone-github.png" alt=""></a>
+                <a href="https://www.instagram.com/viictor.cavalcantee/" target="_blank"><img src="images/icone-instagram.png" alt=""></a>
+            </article>  
     </main>
+    <footer>
+        Desenvolvido por <a href="http://#">Victor De Lima Cavalcante</a>
+    </footer>
+
 </body>
 </html>
