--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </article>  
     </main>
     <footer>
-        Desenvolvido por <a href="http://#">Victor De Lima Cavalcante</a>
+        Desenvolvido por <a href="http://#">Victor</a>
     </footer>
 
 </body>
