--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
                 <h1>Quem sou eu ?</h1>
                 <img src="images/minha foto.png" alt="foto do victor">
                 <p>Meu nome é <b>Victor De Lima Cavalcante Correia</b> tenho <b>26 anos</b>  estou no primeiro semestre de <b>Analise & Desenvolvimento De Sistemas</b> e também fazendo curso de <b>Html5,Css3 e javascript</b>.</p> 
+                <p>Localização: <b>São Paulo SP</b></p>
+                <p>Email: <b> vitor_limacavalcante@hotmail.com</b></p>
                 <h2>como falar comigo</h2>
                 <a href="https://web.facebook.com/vitinhofacenovo" target="_blank"><img src="images/icone-facebook.png" alt=""></a>
                 <a href="https://www.linkedin.com/in/victor-cavalcante-53ab6525b/" target="_blank"><img src="images/icone-linkedin.png" alt=""></a>
