--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>         
             <article>
                 <h1>Quem sou eu ?</h1>
-                <img src="images/minha foto.png" alt="foto do victor">
+                <img src="images/foto nova perfil.png" alt="foto do victor">
                 <p>Meu nome é <b>Victor De Lima Cavalcante Correia</b> tenho <b>26 anos</b>  estou no primeiro semestre de <b>Analise & Desenvolvimento De Sistemas</b> e também fazendo curso de <b>Html5,Css3 e javascript</b>.</p> 
                 <p>Localização: <b>São Paulo SP</b></p>
                 <p>Email: <b> vitor_limacavalcante@hotmail.com</b></p>
