--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <article>
                 <h1>Quem sou eu ?</h1>
                 <img src="images/foto nova perfil.png" alt="foto do victor">
-                <p>Meu nome é <b>Victor De Lima Cavalcante Correia</b> tenho <b>26 anos</b>  estou no primeiro semestre de <b>Analise & Desenvolvimento De Sistemas</b> e também fazendo curso de <b>Html5,Css3 e javascript</b>.</p> 
-                <p>Localização: <b>São Paulo SP</b></p>
-                <p>Email: <b> vitor_limacavalcante@hotmail.com</b></p>
-                <h2>como falar comigo</h2>
+                <p>Sou <b>Victor</b>,  um cara apaixonado por <b>tecnologia </b> e estou em busca de <b>uma oportunidade</b> para iniciar minha carreira na área de <b>TI</b>.</p>        
+                <h2>Conhecimentos em</h2>      
+                <p id="mensagem"></p>  
+                <h3>como falar comigo</h3>
                 <a href="https://web.facebook.com/vitinhofacenovo" target="_blank"><img src="images/icone-facebook.png" alt=""></a>
                 <a href="https://www.linkedin.com/in/victor-cavalcante-53ab6525b/" target="_blank"><img src="images/icone-linkedin.png" alt=""></a>
                 <a href="https://github.com/vitorlimac" target="_blank"><img src="images/icone-github.png" alt=""></a>
@@ -30,6 +30,6 @@
     <footer>
         Desenvolvido por <a href="http://#">Victor</a>
     </footer>
-
+    <script src="script.js"></script>
 </body>
 </html>
