--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <article>
                 <h1>Quem sou eu ?</h1>
                 <img src="images/foto nova perfil.png" alt="foto do victor">
-                <p>Sou <b>Victor</b>,  um cara apaixonado por <b>tecnologia </b> e estou em busca de <b>uma oportunidade</b> para iniciar minha carreira na área de <b>TI</b>.</p>        
+                <p>sou Victor, tenho 26 anos, Sou apaixonado por tecnologia. </p>
+                <p>Estou no segundo semestre de Analise e Desenvolvimento de sistemas</p>  
+                <p>Buscando uma oportunidade para iniciar minha carreira na área de TI.</p>      
                 <h2>Conhecimentos em</h2>      
                 <p id="mensagem"></p>  
                 <h3>como falar comigo</h3>
