--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
             <article>
                 <h1>Quem sou eu ?</h1>
                 <img src="images/foto nova perfil.png" alt="foto do victor">
-                <p>sou Victor, tenho 26 anos, Sou apaixonado por tecnologia. </p>
-                <p>Estou no segundo semestre de Analise e Desenvolvimento de sistemas</p>  
-                <p>Buscando uma oportunidade para iniciar minha carreira na área de TI.</p>      
+                <p>sou <b>Victor </b>tenho 26 anos Sou <b>apaixonado por tecnologia</b> Estou no segundo semestre de <b>Analise e Desenvolvimento de sistemas</b> Buscando uma oportunidade para iniciar minha carreira na área de TI.</p>  
                 <h2>Conhecimentos em</h2>      
-                <p id="mensagem"></p>  
+                <p id="mensagem">...</p>  
                 <h3>como falar comigo</h3>
                 <a href="https://web.facebook.com/vitinhofacenovo" target="_blank"><img src="images/icone-facebook.png" alt=""></a>
                 <a href="https://www.linkedin.com/in/victor-cavalcante-53ab6525b/" target="_blank"><img src="images/icone-linkedin.png" alt=""></a>
