--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <article>
                 <h1>Quem sou eu ?</h1>
                 <img src="images/foto nova perfil.png" alt="foto do victor">
-                <p> sou Victor, tenho 26 anos, Sou apaixonado por tecnologias. Estou no terceiro semestre de Analise e Desenvolvimento de sistemas! Buscando uma oportunidade para iniciar minha carreira na área de TI.</p> 
+                <p> sou Victor, tenho 27 anos, Sou apaixonado por tecnologias. Estou no Quarto semestre de Analise e Desenvolvimento de sistemas! Buscando uma oportunidade para iniciar minha carreira na área de TI.</p> 
                 <h2>Conhecimentos em</h2>      
                 <p id="mensagem">...</p>  
                 <h3>como falar comigo</h3>
